@@ -193,6 +193,9 @@ Library
 Extension Modules
 -----------------
 
+- Issue #12764: Fix a crash in ctypes when the name of a Structure field is not
+  a string.
+
 - Issue #11241: subclasses of ctypes.Array can now be subclassed.
 
 - Issue #9651: Fix a crash when ctypes.create_string_buffer(0) was passed to
